# vibesort

./: .gitignore  README.md  main_v1.py  main_v2.py  play_playlists.ipynb  pyproject.toml
scripts/: visualize.py
src/vibesort/: __init__.py  algo_sorter.py  base_sorter.py  cli.py  deep_sorter.py  utils.py
